--- a/config/openerp-server.conf
+++ b/config/openerp-server.conf
@@ -10,22 +10,22 @@ addons_path = /mnt/extra-addons/
 
 #list_db=False
 
-workers=4
-#limit_memory_hard = 7247757312
-#limit_memory_soft = 6039797760
+workers=13
+limit_memory_hard = 10468982784
+limit_memory_soft = 8724152320
 limit_request = 8192
 limit_time_cpu = 600
 limit_time_real = 1200
 max_cron_threads = 1
 
-#proxy_mode = False
-#log_level = debug_rpc
+proxy_mode = True
+log_level = debug_rpc
 
-#xmlrpc_interface = 127.0.0.1
+xmlrpc_interface = 127.0.0.1
 #netrpc_interface = 127.0.0.1
 
 #xmlrpc_interface = 127.0.0.1
 #xmlrpc_port = 8069
 #netrpc_interface = 127.0.0.1
 
-#longpolling_port = 8072
+longpolling_port = 8072
