--- a/odoo.conf
+++ b/odoo.conf
@@ -2,13 +2,9 @@
 
 upstream odooerp {
     server 127.0.0.1:8069;
-    #server ip2:8069;
-    #server ip3:8069;
 }
-upstream odooerp-im {
-    server 127.0.0.1:8072 weight=1 fail_timeout=0;
-    #server ip2:8072 weight=1 fail_timeout=0;
-    #server ip3:8072 weight=1 fail_timeout=0;
+upstream odoochatt {
+    server 127.0.0.1:8072;
 }
 
 ##https site##
@@ -49,7 +45,7 @@ server {
     }
     
     location /longpolling/ {
-        proxy_pass  http://odooerp-im;
+        proxy_pass  http://odoochatt;
         
         # force timeouts if the backend dies
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
