--- a/config/openerp-server.conf
+++ b/config/openerp-server.conf
@@ -10,18 +10,20 @@ addons_path = /mnt/extra-addons/
 
 #list_db=False
 
-workers=13
-limit_memory_hard = 10468982784
-limit_memory_soft = 8724152320
+workers=12
+#limit_memory_hard = default
+#limit_memory_soft = default
+limit_memory_hard = 9663676416
+limit_memory_soft = 8053063680
 limit_request = 8192
 limit_time_cpu = 600
 limit_time_real = 1200
 max_cron_threads = 1
 
 proxy_mode = True
-log_level = debug_rpc
+#log_level = debug_rpc
 
-xmlrpc_interface = 127.0.0.1
+#xmlrpc_interface = 127.0.0.1
 #netrpc_interface = 127.0.0.1
 
 #xmlrpc_interface = 127.0.0.1
