--- a/config/openerp-server.conf
+++ b/config/openerp-server.conf
@@ -17,6 +17,6 @@ limit_time_real = 1200
 max_cron_threads = 1
 
 proxy_mode = True
-#log_level = debug_rpc
+log_level = info
 
 longpolling_port = 8072
