--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
       - db
     ports:
       - "8069:8069"
+      - "8072:8072"
     volumes:
       - odoo-web-data:/var/lib/odoo
-      - ./config:/etc/odoo
+      - ./config/odoo:/etc/odoo
       - ./addons:/mnt/extra-addons
     environment:
       - PASSWORD_FILE=/run/secrets/postgresql_password
@@ -17,6 +18,18 @@ services:
       - postgresql_password
     networks:
       - odoo_network
+  nginx:
+      container_name: nginx
+      image: nginx:latest
+      restart: unless-stopped
+      ports:
+          - 80:80
+      volumes:
+          - ./config/nginx:/etc/nginx/conf.d/:rw
+      depends_on:
+          - "odoo"
+      networks:
+          - odoo_network
   db:
     image: postgres:13
     restart: always
@@ -45,7 +58,7 @@ services:
 networks:
   odoo_network:
     driver: bridge
-    
+
 volumes:
   odoo-web-data:
   odoo-db-data:
