--- a/config/odoo/openerp-server.conf
+++ b/config/odoo/openerp-server.conf
@@ -16,7 +16,7 @@ limit_time_cpu = 600
 limit_time_real = 1200
 max_cron_threads = 1
 
-proxy_mode = False
+proxy_mode = True
 log_level = info
 
 longpolling_port = 8072
